--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-	minecraft_version=20w20b
-	yarn_mappings=20w20b+build.9
-	loader_version=0.8.3+build.196
+	minecraft_version=1.16-pre2
+	yarn_mappings=1.16-pre2+build.29
+	loader_version=0.8.7+build.201
 
 # Mod Properties
-	mod_version = 0.1.0
+	mod_version = 1.0.0
 	maven_group = head-fix
 	archives_base_name = head-name-fix
 
