--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.1
-loader_version=0.9.1+build.205
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.17
+yarn_mappings=1.17+build.1
+loader_version=0.11.3
 
 # Mod Properties
-mod_version = 1.0.2
+mod_version = 1.0.3
 maven_group = head-fix
 archives_base_name = head-name-fix
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.17.2+build.396-1.16
+fabric_version=0.34.9+1.17
