--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/versions.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.6
+# check these on https://fabricmc.net/develop
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
+loader_version=0.14.6
 
 # Mod Properties
-mod_version = 1.1.0
+mod_version = 1.1.1
 maven_group = head-name-fix
 archives_base_name = head-name-fix
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.43.1+1.18
+fabric_version=0.55.2+1.19
